fix scrollbar

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -55,9 +55,6 @@
     border:0;
 }
 
-body {
-    overflow: hidden; /* Hide scrollbars */
-}
 .jumbotron {
     margin-bottom: 2rem;
     background-color: #e9ecef;
